@@ -1,4 +1,5 @@
 - fix Appender::File bug on Windows when different volume
+- add autoflush option to Log::Log4perl::Appender::Screen
 
 1.54 2021-02-06
 - set real versions for some modules - thanks @eserte for report
